@@ -1,3 +1,5 @@
+2006/4/4 -- released version 20060404_trunk
+
 2006/4/3 -- released version 20060403_trunk
 
 2006/4/2 -- released version 20060402_trunk
